--- a/note/03_edit_image_basic.ipynb
+++ b/note/03_edit_image_basic.ipynb
@@ -62,7 +62,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv_study",
+   "display_name": "ai_study",
    "language": "python",
    "name": "python3"
   },
@@ -76,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
