--- a/note/04_diagram.ipynb
+++ b/note/04_diagram.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8079530b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from PIL import Image, ImageDraw, ImageFont"
    ]
   },
   {
@@ -30,21 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "baa5ba94",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -74,21 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b0b501e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -120,21 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c9f294f5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -164,18 +132,7 @@
    "execution_count": null,
    "id": "c98b85e2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -207,21 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d0b47c6c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -249,21 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "3fb1bf35",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -281,21 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "98836f91",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 실습1. 도형 그려보기\n",
     "\n",
@@ -329,21 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c4e761d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
     "\n",
@@ -367,16 +280,47 @@
    "metadata": {},
    "source": [
     "# 4-8. 텍스트 그리기(한글)\n",
-    "- OpenCV 에서는 한글 텍스트 그리기 지원 X -> 우회적 방법 사용"
+    "- OpenCV 에서는 한글 텍스트 그리기 지원 X -> 우회적 방법 사용\n",
+    "- pip install pillow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3728db26",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "\n",
+    "img = np.zeros((460, 640, 3), dtype=np.uint8)\n",
+    "\n",
+    "def putKorText(img, text, position, font_size, font_color):\n",
+    "    img_pil = Image.fromarray(img)\n",
+    "    draw = ImageDraw.Draw(img_pil)\n",
+    "    font = ImageFont.truetype(\"/System/Library/Fonts/AppleSDGothicNeo.ttc\", font_size)\n",
+    "    draw.text(position, text, font=font, fill=font_color)\n",
+    "    return np.array(img_pil)\n",
+    "\n",
+    "text = putKorText(img, \"안녕하세요\", (220,300), 30, (255,255,255))\n",
+    "\n",
+    "cv.imshow(\"KOR\", text)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
   }
  ],
  "metadata": {
