--- a/note/06_rotate_perspective.ipynb
+++ b/note/06_rotate_perspective.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "7b94a157",
    "metadata": {},
    "outputs": [],
@@ -36,21 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7dfc86bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = cv.imread(DOG_PATH)\n",
     "\n",
@@ -82,18 +71,7 @@
    "execution_count": null,
    "id": "6b265275",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 아핀 변환(math 모듈로 직접 구현)\n",
     "import math\n",
@@ -116,21 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3f57d631",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 아핀 변환(getRotationMatrix2D 이용)\n",
     "\n",
@@ -152,21 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "be865bbe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 트략바와 함께 사용\n",
     "\n",
@@ -207,21 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a0cd985b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = cv.imread(CARD_PATH)\n",
     "\n",
@@ -241,6 +186,211 @@
     "\n",
     "cv.imshow(\"img\", img)\n",
     "cv.imshow(\"warped\", result)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f642de8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습1. 이미지 원근 변환하기\n",
+    "\n",
+    "PRACTICE_PATH = \"../images/book2.jpg\"\n",
+    "\n",
+    "img = cv.imread(PRACTICE_PATH)\n",
+    "\n",
+    "width, height = 200, 300\n",
+    "\n",
+    "src = np.array([[153,113], [345,48], [505,277], [280,387]], dtype=np.float32)\n",
+    "dst = np.array([[0,0], [width,0], [width,height], [0,height]], dtype=np.float32)\n",
+    "mat = cv.getPerspectiveTransform(src, dst)\n",
+    "result = cv.warpPerspective(img, mat, (width, height))\n",
+    "\n",
+    "cv.imshow(\"img\", img)\n",
+    "cv.imshow(\"warped\", result)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e5cc4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = np.array([[153,113], [345,48], [505,277], [280,387]], dtype=np.float32)\n",
+    "\n",
+    "int(src[1][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c2ed26c",
+   "metadata": {},
+   "source": [
+    "## 6-4. 마우스 이벤트\n",
+    "- ```cv2.setMouseCallback(winName, onMouse)```\n",
+    "    - ```onMouse(event)``` : 마우스 이벤트를 처리하는 콜백 함수, 첫번째 인자로 이벤트를 받아줌"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df46e46b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv.imread(DOG_PATH)\n",
+    "\n",
+    "name = \"Mouse Event\"\n",
+    "cv.namedWindow(name)\n",
+    "\n",
+    "def on_mouse(event, x, y, flags, _):\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        copied = img.copy()\n",
+    "        cv.circle(copied, (x,y), 20, (255,255,0), cv.FILLED)\n",
+    "        cv.imshow(name, copied)\n",
+    "\n",
+    "cv.setMouseCallback(name, on_mouse)\n",
+    "\n",
+    "cv.imshow(name, img)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e9bfdbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 실습2. 반자동 문서 스캐너 만들기\n",
+    "PRACTICE_PATH = \"../images/book2.jpg\"\n",
+    "\n",
+    "img = cv.imread(PRACTICE_PATH)\n",
+    "\n",
+    "name = \"Mouse Event(Practice)\"\n",
+    "cv.namedWindow(name)\n",
+    "\n",
+    "width, height = 200, 300\n",
+    "\n",
+    "i = 0\n",
+    "src = np.array([[0,0], [0,0], [0,0], [0,0]], dtype=np.float32)\n",
+    "dst = np.array([[0,0], [width,0], [width,height], [0,height]], dtype=np.float32)\n",
+    "mat = cv.getPerspectiveTransform(src, dst)\n",
+    "result = cv.warpPerspective(img, mat, (width, height))\n",
+    "\n",
+    "def on_mouse(event, x, y, flags, _):\n",
+    "    \n",
+    "    global i\n",
+    "    if i < 4:\n",
+    "        \n",
+    "            src[i] = [x,y]\n",
+    "            i += 1\n",
+    "            cv.circle(img, (x,y), 10, (0,0,255), cv.FILLED)\n",
+    "            if i > 1:\n",
+    "                cv.line(img, (int(src[i-1][0]), int(src[i-1][1])), (x,y), (0,0,255), 5, cv.LINE_AA)\n",
+    "            cv.imshow(name, img)\n",
+    "    if i == 4:\n",
+    "        cv.imshow(\"warped\", result)\n",
+    "\n",
+    "cv.setMouseCallback(name, on_mouse)\n",
+    "cv.imshow(name, img)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30a2a63e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PRACTICE_PATH = \"../images/book2.jpg\"\n",
+    "\n",
+    "img = cv.imread(PRACTICE_PATH)\n",
+    "\n",
+    "name = \"Mouse Event(Practice)\"\n",
+    "point_list = []\n",
+    "\n",
+    "def show_result():\n",
+    "    width = int(np.linalg.norm(np.array(point_list[0]) - (point_list[1])))\n",
+    "    height = int(np.linalg.norm(np.array(point_list[0]) - (point_list[3])))\n",
+    "\n",
+    "    src = np.array(point_list, dtype=np.float32)\n",
+    "    dst = np.array([[0,0], [width,0], [width,height], [0,height]], dtype=np.float32)\n",
+    "    mat = cv.getPerspectiveTransform(src, dst)\n",
+    "    result = cv.warpPerspective(img, mat, (width, height))\n",
+    "    \n",
+    "    cv.imshow(\"warped\", result)\n",
+    "\n",
+    "drawing = False\n",
+    "\n",
+    "def on_mouse(event, x, y, flags, _):\n",
+    "    global drawing\n",
+    "    coppied = img.copy()\n",
+    "    point = (x,y)\n",
+    "\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        drawing = True\n",
+    "        point_list.append(point)\n",
+    "\n",
+    "    if drawing:\n",
+    "        prev_point = None\n",
+    "        for p in point_list:\n",
+    "            cv.circle(coppied, p, 10, (0,0,255), cv.FILLED)\n",
+    "            if prev_point:\n",
+    "                cv.line(coppied, prev_point, p, (0,0,255), 5)\n",
+    "            prev_point = p\n",
+    "\n",
+    "        if len(point_list) == 4:\n",
+    "            point = point_list[0]\n",
+    "            show_result()\n",
+    "        cv.line(coppied, point_list[-1], point, (0,0,255), 5)\n",
+    "\n",
+    "    cv.imshow(name, coppied)\n",
+    "\n",
+    "cv.namedWindow(name)\n",
+    "\n",
+    "cv.setMouseCallback(name, on_mouse)\n",
+    "cv.imshow(name, img)\n",
     "\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()\n",
