--- a/note/06_rotate_perspective.ipynb
+++ b/note/06_rotate_perspective.ipynb
@@ -272,62 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e9bfdbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 실습2. 반자동 문서 스캐너 만들기\n",
-    "PRACTICE_PATH = \"../images/book2.jpg\"\n",
-    "\n",
-    "img = cv.imread(PRACTICE_PATH)\n",
-    "\n",
-    "name = \"Mouse Event(Practice)\"\n",
-    "cv.namedWindow(name)\n",
-    "\n",
-    "width, height = 200, 300\n",
-    "\n",
-    "i = 0\n",
-    "src = np.array([[0,0], [0,0], [0,0], [0,0]], dtype=np.float32)\n",
-    "dst = np.array([[0,0], [width,0], [width,height], [0,height]], dtype=np.float32)\n",
-    "mat = cv.getPerspectiveTransform(src, dst)\n",
-    "result = cv.warpPerspective(img, mat, (width, height))\n",
-    "\n",
-    "def on_mouse(event, x, y, flags, _):\n",
-    "    \n",
-    "    global i\n",
-    "    if i < 4:\n",
-    "        \n",
-    "            src[i] = [x,y]\n",
-    "            i += 1\n",
-    "            cv.circle(img, (x,y), 10, (0,0,255), cv.FILLED)\n",
-    "            if i > 1:\n",
-    "                cv.line(img, (int(src[i-1][0]), int(src[i-1][1])), (x,y), (0,0,255), 5, cv.LINE_AA)\n",
-    "            cv.imshow(name, img)\n",
-    "    if i == 4:\n",
-    "        cv.imshow(\"warped\", result)\n",
-    "\n",
-    "cv.setMouseCallback(name, on_mouse)\n",
-    "cv.imshow(name, img)\n",
-    "\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()\n",
-    "cv.waitKey(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "30a2a63e",
    "metadata": {},
    "outputs": [
@@ -396,11 +340,68 @@
     "cv.destroyAllWindows()\n",
     "cv.waitKey(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24d6597d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PRACTICE_PATH = \"../images/book2.jpg\"\n",
+    "\n",
+    "img = cv.imread(PRACTICE_PATH)\n",
+    "\n",
+    "point_list = []\n",
+    "\n",
+    "name = \"Mouse Event\"\n",
+    "cv.namedWindow(name)\n",
+    "\n",
+    "def show_img():\n",
+    "    width = int(np.linalg.norm(np.array(point_list[0]) - (point_list[1])))\n",
+    "    height = int(np.linalg.norm(np.array(point_list[0]) - (point_list[3])))\n",
+    "\n",
+    "    src = np.array(point_list, dtype=np.float32)\n",
+    "    dst = np.array([[0,0], [width,0], [width,height], [0,height]], dtype=np.float32)\n",
+    "    mat = cv.getPerspectiveTransform(src, dst)\n",
+    "    result = cv.warpPerspective(img, mat, (width, height))\n",
+    "    \n",
+    "    cv.imshow(\"result\", result)\n",
+    "\n",
+    "def on_mouse(event, x, y, flags, _):\n",
+    "    coppied = img.copy()\n",
+    "    point = (x,y)\n",
+    "\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        point_list.append(point)\n",
+    "\n",
+    "    for i, p in enumerate(point_list):\n",
+    "        cv.circle(coppied, p, 10, (0,0,255), cv.FILLED)\n",
+    "        if i > 0:\n",
+    "            cv.line(coppied, point_list[i-1], p, (0,0,255), 5)\n",
+    "\n",
+    "    if len(point_list) > 0 and len(point_list) < 4:\n",
+    "        cv.line(coppied, point_list[-1], point, (0,0,255), 5) \n",
+    "\n",
+    "    if len(point_list) == 4:\n",
+    "        cv.line(coppied, point_list[-1], point_list[0], (0,0,255), 5) \n",
+    "        show_img()\n",
+    "    \n",
+    "    cv.imshow(name, coppied)\n",
+    "\n",
+    "cv.setMouseCallback(name, on_mouse)\n",
+    "\n",
+    "cv.imshow(name, img)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "# cv.waitKey(1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv_study",
+   "display_name": "ai_study",
    "language": "python",
    "name": "python3"
   },
@@ -414,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
