--- a/note/06_rotate_perspective.ipynb
+++ b/note/06_rotate_perspective.ipynb
@@ -401,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai_study",
+   "display_name": "cv_study",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
