--- a/note/10_face_recognition.ipynb
+++ b/note/10_face_recognition.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1bfe672b",
    "metadata": {},
    "outputs": [],
@@ -27,18 +27,7 @@
    "execution_count": null,
    "id": "c7783ddd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "face_cascade = cv.CascadeClassifier(FACE_CASCADE)\n",
     "\n",
@@ -66,29 +55,7 @@
    "execution_count": null,
    "id": "8b0102fb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
     "\n",
@@ -114,7 +81,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv_study",
+   "display_name": "ai_study",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
