--- a/note/10_face_recognition.ipynb
+++ b/note/10_face_recognition.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
+    "\n",
     "FACE = \"../images/face1.jpg\"\n",
     "\n",
     "FACE_CASCADE = \"../cascade/haarcascade_frontalface_default.xml\"\n",
@@ -77,11 +78,288 @@
     "cv.destroyAllWindows()\n",
     "cv.waitKey(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab07bba9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습1. 캠화면에 적용\n",
+    "\n",
+    "face_cascade = cv.CascadeClassifier(FACE_CASCADE)\n",
+    "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
+    "\n",
+    "cap = cv.VideoCapture()\n",
+    "\n",
+    "SCALE = 1\n",
+    "THICKNESS = 2\n",
+    "COLOR = (255,255,255)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    faces = face_cascade.detectMultiScale(\n",
+    "        gray, scaleFactor=1.1, minNeighbors=10, minSize=(10,10)\n",
+    "    )   \n",
+    "    eyes = eye_cascade.detectMultiScale(\n",
+    "        gray, scaleFactor=1.1, minNeighbors=30, minSize=(30,30)\n",
+    "    )\n",
+    "\n",
+    "    if len(faces):\n",
+    "        for face in faces:\n",
+    "            x, y, width, height = face\n",
+    "            cv.rectangle(frame, (x,y), (x+width, y+height), (0,0,255), 2, cv.LINE_AA)\n",
+    "            cv.putText(frame, \"Face\", (x,y), cv.FONT_HERSHEY_DUPLEX, SCALE, COLOR, THICKNESS)\n",
+    "    if len(eyes):\n",
+    "        for eye in eyes:\n",
+    "            x, y, width, height = eye\n",
+    "            cv.rectangle(frame, (x,y), (x+width, y+height), (0,255,0), 2, cv.LINE_AA)\n",
+    "            cv.putText(frame, \"Eye\", (x,y), cv.FONT_HERSHEY_DUPLEX, SCALE, COLOR, THICKNESS)\n",
+    "\n",
+    "    cv.imshow(\"Camera\", frame)\n",
+    "\n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c596c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습2. 눈 덮어 씌우기\n",
+    "\n",
+    "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
+    "\n",
+    "img = cv.imread(FACE)\n",
+    "eye_icon = cv.imread(\"../images/eye.png\")\n",
+    "\n",
+    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "eyes = eye_cascade.detectMultiScale(\n",
+    "    gray, scaleFactor=1.1, minNeighbors=15, minSize=(10,10)\n",
+    ")\n",
+    "\n",
+    "if len(eyes):\n",
+    "    for eye in eyes:\n",
+    "        x, y, width, height = eye\n",
+    "        img[y:y+height, x:x+width] = cv.resize(eye_icon, (width, height))\n",
+    "\n",
+    "cv.imshow(\"img\", img)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c1a5e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습2. 눈 덮어 씌우기 (비디오)\n",
+    "\n",
+    "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
+    "\n",
+    "cap = cv.VideoCapture(\"../videos/face.mp4\")\n",
+    "fps = cap.get(cv.CAP_PROP_FPS)\n",
+    "eye_icon = cv.imread(\"../images/eye.png\")\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    eyes = eye_cascade.detectMultiScale(\n",
+    "        gray, scaleFactor=1.1, minNeighbors=15, minSize=(10,10)\n",
+    "    )\n",
+    "\n",
+    "    if len(eyes):\n",
+    "        for eye in eyes:\n",
+    "            x, y, width, height = eye\n",
+    "            frame[y:y+height, x:x+width] = cv.resize(eye_icon, (width, height))\n",
+    "\n",
+    "    cv.imshow(\"Video\", frame)\n",
+    "    \n",
+    "    if cv.waitKey(int(1000/fps)) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fc36fc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습3. 웹캠 움직임 감지하여 캡쳐하여 저장\n",
+    "\n",
+    "cap = cv.VideoCapture(0)\n",
+    "fgbg = cv.createBackgroundSubtractorMOG2(detectShadows=False)\n",
+    "count = 0\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "    fgmask = fgbg.apply(gray)\n",
+    "\n",
+    "    if cv.countNonZero(fgmask) > 100000:\n",
+    "        contours, _ = cv.findContours(fgmask, cv.RETR_LIST, cv.CHAIN_APPROX_NONE)\n",
+    "\n",
+    "        for contour in contours:\n",
+    "            if cv.contourArea(contour) > 1000:\n",
+    "                cv.imwrite(f\"../output/test_{count}.jpg\", frame)\n",
+    "                count += 1\n",
+    "\n",
+    "    cv.imshow('video', frame)\n",
+    "\n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c5192e5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@1126.961] global cap_gstreamer.cpp:1173 isPipelinePlaying OpenCV | GStreamer warning: GStreamer: pipeline have not been created\n",
+      "qt.pointer.dispatch: skipping QEventPoint(id=0 ts=0 pos=0,0 scn=1030.85,672.547 gbl=1030.85,672.547 Released ellipse=(1x1 ∡ 0) vel=0,0 press=-1030.85,-672.547 last=-1030.85,-672.547 Δ 1030.85,672.547) : no target window\n",
+      "qt.pointer.dispatch: skipping QEventPoint(id=1 ts=0 pos=0,0 scn=951.823,734.108 gbl=951.823,734.108 Released ellipse=(1x1 ∡ 0) vel=0,0 press=-951.823,-734.108 last=-951.823,-734.108 Δ 951.823,734.108) : no target window\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import os\n",
+    "\n",
+    "# 폴더 생성\n",
+    "SAVE_DIR = \"../output\"\n",
+    "\n",
+    "# 최소 영역\n",
+    "MIN_AREA = 1200\n",
+    "# 저장 간격(초단위)\n",
+    "COOLDOWN = 1.0\n",
+    "\n",
+    "# 폴더가 없으면 생성\n",
+    "os.makedirs(SAVE_DIR, exist_ok=True)\n",
+    "\n",
+    "cap = cv.VideoCapture(0)\n",
+    "\n",
+    "if not cap.isOpened():\n",
+    "    raise RuntimeError(\"웹캠 오류\")\n",
+    "\n",
+    "# 배경제거\n",
+    "# 웹캠이나 CCTV영상처럼 움직이는 물건(전경)과 고정된 배경을 자동으로 구분할때 사용\n",
+    "# history : 기본값 500, 값이 크면 배경 모델이 천천히 변함(안정적), 작으면 빠르게 변함(민감)\n",
+    "# varThreshold : 기본값 16, 픽셀이 전경인지 배경인지 판단\n",
+    "    # 값이 작으면 작은 변화에도 움직임으로 판단\n",
+    "    # 값이 크면 큰 변화가 있어야 움직임으로 판단\n",
+    "# detectShadows : 기본값 True, 그림자 검출 여부\n",
+    "\n",
+    "backsub = cv.createBackgroundSubtractorMOG2(history=200, varThreshold=25, detectShadows=True)\n",
+    "\n",
+    "last_saved = 0.0\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    # 전경 마스크 받아오기\n",
+    "    fg = backsub.apply(frame) # 현재 프레임에서 움직임 부분만 추출\n",
+    "    # 그림자 제거 : 200이상 부분만 남기고 나머지는 0으로 처리\n",
+    "    _, fg = cv.threshold(fg, 200, 255, cv.THRESH_BINARY)\n",
+    "    # 움직이는 영역을 키워서 구멍 메우기\n",
+    "    fg = cv.dilate(fg, None, iterations=2)\n",
+    "\n",
+    "    # 움직임 영역 찾기\n",
+    "    contours, _ = cv.findContours(fg, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    motion = False # 움직임이 있었는지 표시하는 변수\n",
+    "\n",
+    "    for c in contours:\n",
+    "        # 너무 작은 영역 무시\n",
+    "        if cv.contourArea(c) < MIN_AREA:\n",
+    "            continue\n",
+    "\n",
+    "        # 움직임이 있는 부분에 사각형 표시\n",
+    "        x, y, w, h = cv.boundingRect(c)\n",
+    "        cv.rectangle(frame, (x,y), (x+w, y+h), (0,255,0), 2)\n",
+    "        motion = True\n",
+    "\n",
+    "    # 움직인 사진 저장\n",
+    "    now = time.time()\n",
+    "    if motion and (now - last_saved > COOLDOWN):\n",
+    "        filename = time.strftime(\"%Y%m%d_%H%M%S\") + \".jpg\" # 현재 시간으로 파일명 생성\n",
+    "        cv.imwrite(os.path.join(SAVE_DIR, filename), frame) # 현재 프레임 저장\n",
+    "        last_saved = now\n",
+    "\n",
+    "    # 화면 상단에 \"Motion : ON/OFF\" 글자 표시\n",
+    "    cv.putText(frame, f\"Motion : {'ON' if motion else 'OFF'}\", (10, 30), cv.FONT_HERSHEY_DUPLEX, 1, (0,255,0) if motion else (0,0,255), 2)\n",
+    "\n",
+    "    # 원본 영싱과 마스크 영상 출력\n",
+    "    cv.imshow(\"frame\", frame)\n",
+    "    cv.imshow(\"mask\", fg)\n",
+    "\n",
+    "    # 종료\n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "# 카메라, 창 종료\n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()\n",
+    "cv.waitKey(1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai_study",
+   "display_name": "cv_study",
    "language": "python",
    "name": "python3"
   },
@@ -95,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
